welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: value toint is not a member of Int
  return c/nums.length.toint
                       ^